--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </head>
 
   <body>
+
     <main>
       <section class="page-section intro-section">
         <header class="page-header">
@@ -38,6 +39,7 @@
           <button class="btn btn-primary btn-clkb">Show more</button>
         </div>
       </section>
+
       <section class="page-section about">
         <div class="container-fluid">
           <div class="rectangle"></div>
@@ -56,6 +58,7 @@
           </div>
         </div>
       </section>
+
       <section class="page-section services">
         <div class="container">
           <div class="container container-min">
@@ -94,8 +97,141 @@
             <img class="quote rotation" src="img/quote.png" alt="''">
           </div>
         </div>
-        
       </section>
+
+      <section class="page-section prices">
+        <div class="container-fluid">
+          <div class="container container-min">
+            <h4>Check Our Prices</h4>
+            <hr>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
+          </div>
+          <div class="feature-boxes price-boxes">
+            <div class="price-box">
+              <div class="price-box-header">
+                <h5><span>$</span>19</h5>
+                <p class="period">per month</p>
+                <button class="btn btn-primary btn-prices">Standard</button>
+              </div>
+              <div class="price-box-main">
+                <p>5 Projects</p>
+                <p>200 MB Storage</p>
+                <p>Notification settings</p>
+            
+                <p>Password protection</p>
+                <button class="btn btn-primary btn-buy btn-clkb">buy now</button>
+              </div>
+            </div>
+            <div class="price-box">
+              <div class="price-box-header">
+                <h5><span>$</span>39</h5>
+                <p class="period">per month</p>
+                <button class="btn btn-primary btn-prices">Standard</button>
+              </div>
+              <div class="price-box-main">
+                <p>15 Projects</p>
+                <p>1 GB Storage</p>
+                <p>Notification settings</p>
+                <p>Password protection</p>
+                <button class="btn btn-primary btn-buy btn-clkb">buy now</button>
+              </div>
+            </div>
+            <div class="price-box">
+              <div class="price-box-header">
+                <h5><span>$</span>59</h5>
+                <p class="period">per month</p>
+                <button class="btn btn-primary btn-prices">Standard</button>
+              </div>
+              <div class="price-box-main">
+                <p>30 Projects</p>
+                <p>2 GB Storage</p>
+                <p>Notification settings</p>
+                <p>Password protection</p>
+                <button class="btn btn-primary btn-buy btn-clkb">buy now</button>
+              </div>
+            </div>
+            <div class="price-box">
+              <div class="price-box-header">
+                <h5><span>$</span>99</h5>
+                <p class="period">per month</p>
+                <button class="btn btn-primary btn-prices">Standard</button>
+              </div>
+              <div class="price-box-main">
+                <p>Unlimited Projects</p>
+                <p>Unlimited Storage</p>
+                <p>Notification settings</p>
+                <p>Password protection</p>
+                <button class="btn btn-primary btn-buy btn-clkb">buy now</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="container">
+          <div class="feature-boxes offer-boxes">
+            <div class="offer-box">
+              <div class="col col-l">
+                <img src="img/offer-item-1.png">
+              </div>
+              <div class="col col-r">
+                <h6>high resolution</h6>
+                <p>Lorem ipsum dolor sit amet, adipisicing elit, sed do elusmod tempor incididunt ut labore et dolote magna aliqua. Ut</p>
+              </div>
+            </div>
+            <div class="offer-box">
+              <div class="col col-l">
+                <img src="img/offer-item-2.png">
+              </div>
+              <div class="col col-r">
+                <h6>photography</h6>
+                <p>Lorem ipsum dolor sit amet, adipisicing elit, sed do elusmod tempor incididunt ut labore et dolote magna aliqua. Ut</p>
+              </div>
+            </div>
+            <div class="offer-box">
+              <div class="col col-l">
+                <img src="img/offer-item-3.png">
+              </div>
+              <div class="col col-r">
+                <h6>easy to customize</h6>
+                <p>Lorem ipsum dolor sit amet, adipisicing elit, sed do elusmod tempor incididunt ut labore et dolote magna aliqua. Ut</p>
+              </div>
+            </div>
+            <div class="offer-box">
+              <div class="col col-l">
+                <img src="img/offer-item-4.png">
+              </div>
+              <div class="col col-r">
+                <h6>24/7 support</h6>
+                <p>Lorem ipsum dolor sit amet, adipisicing elit, sed do elusmod tempor incididunt ut labore et dolote magna aliqua. Ut</p>
+              </div>
+            </div>
+            <div class="offer-box">
+              <div class="col col-l">
+                <img src="img/offer-item-5.png">
+              </div>
+              <div class="col col-r">
+                <h6>powerfull theme</h6>
+                <p>Lorem ipsum dolor sit amet, adipisicing elit, sed do elusmod tempor incididunt ut labore et dolote magna aliqua. Ut</p>
+              </div>
+            </div>
+            <div class="offer-box">
+              <div class="col col-l">
+                <img src="img/offer-item-6.png">
+              </div>
+              <div class="col col-r">
+                <h6>seo optimization</h6>
+                <p>Lorem ipsum dolor sit amet, adipisicing elit, sed do elusmod tempor incididunt ut labore et dolote magna aliqua. Ut</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="container-fluid container-fluid-p">
+          <div class="container join-us">
+            <h4>became a part of <span>mache</span> community today</h4>
+            <button class="btn btn-primary btn-rev btn-clkb">join us</button>
+          </div>
+        </div>
+      </section>
+
     </main>
 
     <footer class="page-footer">
