--- a/index.html
+++ b/index.html
@@ -230,6 +230,82 @@
             <button class="btn btn-primary btn-rev btn-clkb">join us</button>
           </div>
         </div>
+
+        <div class="container">
+          <div class="container container-min">
+            <h4>Our Latest Updates</h4>
+            <hr>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+          </div>
+          <div class="feature-boxes latest-boxes">
+            <a href="#">
+              <div class="latest-box">
+                <div class="image image-1">
+                  <div class="stripe"><img src="img/stripe.png" alt=""></div>
+                </div>
+                <div class="latest-box-note">
+                  <h6 class="thumb">Lorem ipsuma dolor sit</h6>
+                  <p>Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor incididunt ut labore et</p>
+                </div>
+              </div>
+            </a>
+            <a href="#">
+              <div class="latest-box">
+                <div class="image image-2">
+                  <div class="stripe"><img src="img/stripe.png" alt=""></div>
+                </div>
+                <div class="latest-box-note">
+                  <h6 class="thumb">Lorem ipsuma dolor sit</h6>
+                  <p>Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor incididunt ut labore et</p>
+                </div>
+              </div>
+            </a>
+            <a href="#">
+              <div class="latest-box">
+                <div class="image image-3">
+                  <div class="stripe"><img src="img/stripe.png" alt=""></div>
+                </div>
+                <div class="latest-box-note">
+                  <h6 class="thumb">Lorem ipsuma dolor sit</h6>
+                  <p>Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor incididunt ut labore et</p>
+                </div>
+              </div>
+            </a>
+            <a href="#">
+              <div class="latest-box">
+                <div class="image image-4">
+                  <div class="stripe"><img src="img/stripe.png" alt=""></div>
+                </div>
+                <div class="latest-box-note">
+                  <h6 class="thumb">Lorem ipsuma dolor sit</h6>
+                  <p>Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor incididunt ut labore et</p>
+                </div>
+              </div>
+            </a>
+            <a href="#">
+              <div class="latest-box">
+                <div class="image image-5">
+                  <div class="stripe"><img src="img/stripe.png" alt=""></div>
+                </div>
+                <div class="latest-box-note">
+                  <h6 class="thumb">Lorem ipsuma dolor sit</h6>
+                  <p>Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor incididunt ut labore et</p>
+                </div>
+              </div>
+            </a>
+            <a href="#">
+              <div class="latest-box">
+                <div class="image image-6">
+                  <div class="stripe"><img src="img/stripe.png" alt=""></div>
+                </div>
+                <div class="latest-box-note">
+                  <h6 class="thumb">Lorem ipsuma dolor sit</h6>
+                  <p>Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor incididunt ut labore et</p>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
       </section>
 
     </main>
