--- a/index.html
+++ b/index.html
@@ -43,17 +43,15 @@
       <section class="page-section about">
         <div class="container-fluid">
           <div class="rectangle"></div>
-          <div class="container-b container-right">
-            <div class="grid">
-              <div class="item item-1">
-                <h4>Powerfull PSD template available for free!</h4>
-                <hr>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa</p>
-                <a href="#" class="video"><h6>See the video <img src="img/play.png" alt=""></h6></a>
-              </div>
-              <div class="item item-2">
-                <img src="img/mac-book.png" class="mac" alt="MacBook">
-              </div>
+          <div class="flex">
+            <div class="item item-1">
+              <h4>Powerfull PSD template available for free!</h4>
+              <hr>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa</p>
+              <button href="#" class="btn btn-clkb video"><h6>See the video <img src="img/play.png" alt=""></h6></button>
+            </div>
+            <div class="item item-2">
+              <img src="img/mac-book.png" class="mac" alt="MacBook">
             </div>
           </div>
         </div>
@@ -305,7 +303,36 @@
               </div>
             </a>
           </div>
+          <button class="btn show-more">
+            <h6>show more</h6>
+            <img src="img/arrow-down.png" alt="">
+          </button>
         </div>
+      </section>
+
+      <section class="page-section contact">
+        <div class="container-fluid diver">
+          <div class="container container-min">
+            <h4>Mache Free PSD Template</h4>
+            <hr>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <button class="btn btn-primary btn-clkb">show more</button>
+          </div>
+        </div>
+        <div class="container-fluid">
+            <div class="flex">
+              <div class="item item-2">
+                <img src="img/browser.png" class="browser" alt="rowser">
+              </div>
+              <div class="item item-1">
+                <h4>Please share some love by appreciate it and download!</h4>
+                <hr>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa</p>
+                <button class="btn btn-primary btn-clkb">Download now</button>
+              </div>
+            </div>
+        </div>
+
       </section>
 
     </main>
