--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
               </div>
             </a>
           </div>
-          <button class="btn show-more">
+          <button class="btn btn-clkb show-more">
             <h6>show more</h6>
             <img src="img/arrow-down.png" alt="">
           </button>
@@ -320,17 +320,17 @@
           </div>
         </div>
         <div class="container-fluid">
-            <div class="flex">
-              <div class="item item-2">
-                <img src="img/browser.png" class="browser" alt="rowser">
-              </div>
-              <div class="item item-1">
-                <h4>Please share some love by appreciate it and download!</h4>
-                <hr>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa</p>
-                <button class="btn btn-primary btn-clkb">Download now</button>
-              </div>
+          <div class="flex">
+            <div class="item item-2">
+              <img src="img/browser.png" class="browser" alt="rowser">
             </div>
+            <div class="item item-1">
+              <h4>Please share some love by appreciate it and download!</h4>
+              <hr>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa</p>
+              <button class="btn btn-primary btn-clkb">Download now</button>
+            </div>
+          </div>
         </div>
 
       </section>
