final static version
Final static version
- full template
- hal-responsive (no template for small version)
- still, without JS yet

--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Paweł Zarębski">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Trening PSD</title>
+    <title>Mache PSD</title>
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/style.css">
+
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
