link to template
just added link to template

--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
     <footer class="page-footer">
       <div class="container">
         <p>&copy; 2019 Copyright mache template</p>
-        <p class="right">designed by&nbsp;<a href="#">
+        <p class="right">designed by&nbsp;<a href="https://symu.co/freebies/templates-4/mache-psd-template/">
           <img src="img/logo-small-white.png" alt="">
         </a></p>
       </div>
