--- a/index.html
+++ b/index.html
@@ -96,7 +96,6 @@
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, std doeiusmod tempor incididunt ut labore tet dolore magna aliqua. Utenim ad minim veniam, quis nostrud exercitation ullamco laborisnisi ut aliquip ex.</p>
               <button class="arrow arrow-r btn btn-clkb rotation" href="#"><img src="img/arrow.png" alt=""></button>
             </div>
-              
             <img class="quote rotation" src="img/quote.png" alt="''">
           </div>
         </div>
@@ -345,7 +344,7 @@
     <footer class="page-footer">
       <div class="container">
         <p>&copy; 2019 Copyright mache template</p>
-        <p class="right">designed by&nbsp;<a href="https://symu.co/freebies/templates-4/mache-psd-template/">
+        <p class="right">designed by&nbsp;<a href="#">
           <img src="img/logo-small-white.png" alt="">
         </a></p>
       </div>
